--- a/manifest.yml
+++ b/manifest.yml
@@ -160,6 +160,9 @@ dependencies:
   cf_stacks:
   - cflinuxfs2
   - cflinuxfs3
+- name: cmake
+  version: 3.12.1
+  uri: https://cmake.org/files/v3.12/cmake-3.12.1.tar.gz
 include_files:
 - CHANGELOG
 - CONTRIBUTING.md
